@@ -1,3 +1,8 @@
+2006-03-04 19:44 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Palettes/3Containers/GormTableViewEditor.m: Correction for 
+	bug#15987.
+
 2006-02-22 22:52 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Gorm.m: Overide arrangeInFront: so that when testing the interface
